--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 <h1>Welcome</h1>
 <h2>Log in To continue</h2>
 
-<form action="http://localhost:3456/login" method="post">
+<form action="/login" method="post">
     <input name="username" type="text" placeholder="username" required>
     <br>
     <input name="password" type="password" placeholder="password" required>
@@ -21,7 +21,7 @@
 
     <!--<input type="button" value="Sign Up" formaction="http://localhost:3456/signup">-->
 </form>
-<a href="http://localhost:3456/signup">New user? Signup </a>
+<a href="/signup">New user? Signup </a>
 
 
 
