--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,7 +11,7 @@
 <h1>Welcome</h1>
 <h2>Log in To continue</h2>
 
-<form action="http://localhost:3456/signup" method="post">
+<form action="/signup" method="post">
     <input name="email" type="text" placeholder="email Id" required>
     <br>
     <input name="username" type="text" placeholder="username" required>
