--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -10,7 +10,7 @@
 
 <h1>Welcome</h1><h2><%=username%></h2>
 
-<form action="http://localhost:3456/addMessage" method="post">
+<form action="/addMessage" method="post">
 <label name="message" style="background-color: gold">
 <%- messages%>
 </label>
